1999-12-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleFocusIn):
	fixed clicktofocus in pager

1999-12-01  Tomas Ogren  <stric@ing.umu.se>

	* fvwm/Makefile.am: Added geometry.h to fvwm2_SOURCES.

1999-11-30  Paul D. Smith  <psmith@gnu.org>

	* configure.in (dmalloc): Allow the user to add --enable-dmalloc
	to enable the dmalloc heap debugging library.

	* libs/fvwmlib.h: #include dmalloc.h if it exists and we're
	building with dmalloc support.
	* fvwm/fvwmdebug.h: Ditto.

1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

        * fvwm/borders.c (RedrawBorder):
        * fvwm/events.c (HandleButtonPress):
        fixed depressed borders without handles
        * fvwm/borders.c (RedrawBorder):
	(draw_frame_relief):
	improved drawing of thin borders

1999-11-29  olicha   <olivier.chapuis@free.fr>

	* fvwm/bindings.c (ParseBinding):
	* fvwm/builtins.c (strokeFunc):
	* fvwm/events.c (HandleButtonRelease):
	* fvwm/fvwm2.1:
	* libs/Bindings.c (AddBinding):
	(CheckBinding):
	* libs/fvwmlibs.h (struct Binding):
	Now we can use numeric pad grid for defining Stroke sequence;
	the telephone grid is still the default
	Now a stroke sequence is stored in a string in the Binding
	structure
	Replaced the fprintf to stderr by some fvwm_msg in ParseBinding.
	Tried to improve a little bit the Stroke doc

1999-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (MoveViewport):
	improved page switching code to minimise redraws: map windows top down,
	then unmap bottom up
	removed debug code and duplicate if condition

	* fvwm/add_window.c (AddWindow):
	removed XSynchronize call :-)

1999-11-28  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Minor adjustment to StrokeFunc description.

1999-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed screwed up previous commit

	* fvwm/geometry.c (gravity_get_naked_geometry):
	removed undeclared variable

	* fvwm/builtins.c (SetHiColorset):
	removed debug code
