@@ -1228,10 +1228,8 @@ void DrawDecorations(
   if (cd.flags.has_color_changed)
   {
     change_window_background(t->decor_w, cd.valuemask, &cd.attributes);
-    change_window_background(t->frame, cd.valuemask, &cd.attributes);
     if (HAS_TITLE(t))
     {
-fprintf(stderr,"changed_window_background\n");
       change_window_background(
 	t->title_w, cd.notex_valuemask, &cd.notex_attributes);
     }
